// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Request Body spec examples > PUT with JSON body > generates body type and required body argument for full update 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PutUsersUserIdBody = {
  name: string;
  email: string;
};

/** Updated */
export type PutUsersUserIdResponse = void;"
`;

exports[`Request Body spec examples > PUT with JSON body > generates body type and required body argument for full update 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PutUsersUserIdBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    putUsersByUserId: decorateWithErrors<(userId: string, body: PutUsersUserIdBody) => Promise<void>, never>(
      async (userId: string, body: PutUsersUserIdBody): Promise<void> => {
        try {
          const result = await requester<void>("PUT", \`/users/\${encodeURIComponent(userId)}\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Request Body spec examples > application/json body > generates body type and body arg in method for POST with JSON 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostUsersBody = {
  name: string;
  email: string;
  age?: number;
};

/** Created */
export type PostUsersResponse = void;"
`;

exports[`Request Body spec examples > application/json body > generates body type and body arg in method for POST with JSON 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostUsersBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postUsers: decorateWithErrors<(body?: PostUsersBody) => Promise<void>, never>(
      async (body?: PostUsersBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/users\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Request Body spec examples > application/json body > generates body type from $ref schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type CreateUser = {
  username: string;
  password: string;
};

export type PostRegisterBody = CreateUser;

/** Registered */
export type PostRegisterResponse = void;"
`;

exports[`Request Body spec examples > multiple content types > picks first content type schema for type generation 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostUploadBody = {
  url: string;
  metadata?: string;
};

/** Uploaded */
export type PostUploadResponse = void;"
`;

exports[`Request Body spec examples > required body > non-optional body arg when required: true 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostOrdersBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postOrders: decorateWithErrors<(body: PostOrdersBody) => Promise<void>, never>(
      async (body: PostOrdersBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/orders\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Request Body spec examples > required body > optional body arg when required is false or absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PatchProfileBody } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    patchProfile: decorateWithErrors<(body?: PatchProfileBody) => Promise<void>, never>(
      async (body?: PatchProfileBody): Promise<void> => {
        try {
          const result = await requester<void>("PATCH", \`/profile\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
